--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
