--- a/my-app/package.json
+++ b/my-app/package.json
@@ -49,6 +49,7 @@
     "postcss-import": "^15.1.0",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "postcss": "^8.5.6",
